--- a/html-forms.html
+++ b/html-forms.html
@@ -5,50 +5,19 @@
 <title>HTML forms</title>
 </head>
 <body>
-<form>
+Email address:
 
-<div>
-<label for="email">Email address:</label>
-<input type="text" id="email" name="email">
-</div>
+Full name:
 
-<div>
-<label for="fullname">Full name:</label>
-<input type="text" id="fullname" name="fullname">
-</div>
+Phone number:
 
-<div>
-<label for="phone">Phone number:</label>
-<input type="text" id="phone" name="phone">
-</div>
+How did you first hear about Carboot.com?
+Friend or Family Member
+Website
+Newspaper/Magazine Advert
+TV
 
-<fieldset>
-<legend>How did you first hear about Carboot.com?</legend>
-<div>
-<input type="radio" id="friend" name="hear" value="friend">
-<label for="friend">Friend or Family Member</label>
-</div>
-<div>
-<input type="radio" id="website" name="hear" value="website">
-<label for="website">Website</label>
-</div>
-<div>
-<input type="radio" id="magazine" name="hear" value="magazine">
-<label for="magazine">Newspaper/Magazine Advert</label>
-</div>
-<div>
-<input type="radio" id="tv" name="hear" value="tv">
-<label for="tv">TV</label>
-</div>
-</fieldset>
-
-<div>
-<input type="checkbox" id="terms" name="terms" value="agree">
-<label for="terms">I agree to the terms and conditions</label>
-</div>
-
-<input type="submit" value="Submit the form" name="submit">
-</form>
+I agree to the terms and conditions
 
 </body>
 </html>
