--- a/html-forms.html
+++ b/html-forms.html
@@ -9,15 +9,14 @@ Email address:
 
 Full name:
 
-Phone number:
-
-How did you first hear about Carboot.com?
-Friend or Family Member
-Website
-Newspaper/Magazine Advert
-TV
+What is the capital of Venezuala?
+Lima
+Caracas
+Buenos Aires
+Sucre
 
 I agree to the terms and conditions
 
+Submit answer
 </body>
 </html>
